test/network/mks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-wp-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mywp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-wp-wordpress
            port:
              number: 80
